# Parsnip

./: .gitignore  Parsnip.cabal  fourmolu.yaml
Data/: Parsnip.hs
Data/Parsnip/: Base.hs  Combinators.hs  Stream.hs
